src/components/filter/FilterSelect.css
.filters {
  display: flex;
  align-items: center;
}

label {
  margin-right: 20px;
}

select {
  padding: 10px;
  border: none;
  color: #00997B;
  background-color: #fff;
  border-radius: 5px;
  outline: none;
  text-align: center;
  max-width: 70%;
}

@media (max-width: 826px) {
  .filters {
    flex-direction: column;
  }

  label {
    margin-right: 0;
    margin-bottom: 10px;
  }
}

